--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>power_of_number</name>
+	<name>check_palindrom_or_not</name>
 	<comment></comment>
 	<projects>
 	</projects>
